--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,12 @@ dependencies {
     // https://mvnrepository.com/artifact/app.cash.sqldelight/sqlite-driver
     runtimeOnly 'app.cash.sqldelight:sqlite-driver:2.0.2'
 
-    implementation 'org.springframework:spring-context:6.1.5'
+    implementation 'org.springframework:spring-context:6.1.14'
+
+    implementation 'org.openjfx:javafx-controls:17.0.6'
+    implementation 'org.openjfx:javafx-fxml:17.0.6'
+    implementation 'org.openjfx:javafx-web:17.0.6'  // Adaugă dacă folosești WebView
+    implementation 'org.openjfx:javafx-media:17.0.6'  // Adaugă dacă folosești funcționalități media
 }
 
 application {
